# admin-dashboard

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  SERVICES.md  app.py  docker-compose.yml  pyproject.toml  requirements.txt
.streamlit/: config.toml
src/: __init__.py
src/config/: config.py
src/core/: auth.py  models.py  security.py
src/services/: __init__.py  activity_type_service.py  analytics_service.py  chat_moderation_service.py  community_forum_service.py  community_service.py  convertkit_service.py  database_service.py  moderation_service.py  notification_service.py  user_service.py  venue_service.py
src/ui/: components.py  dashboard.py  error_handler.py
src/ui/tabs/: __init__.py  activity_types_tab.py  analytics_tab.py  chat_moderation_tab.py  communities_tab.py  convertkit_tab.py  feedback_tab.py  forum_moderation_tab.py  notifications_tab.py  reports_tab.py  user_activities_tab.py  user_lookup_tab.py  venues_tab.py
src/utils/: __init__.py  error_handler.py  exceptions.py  logging_config.py
tests/: test_auth.py  test_security.py
